[metadata]
name = data_migration_tool
version = 0.1
author = Jean-Baptiste Braun
author_email = jbaptiste.braun@gmail.com
description = A data migration tool (GCP, BigQuery)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jbbqqf/data_migration_tool
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6

[options.entry_points]
console_scripts =
    dmt = dmt.core:main
